# email_newsletter

./: Cargo.toml  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
